--- a/public/tacdom.html
+++ b/public/tacdom.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>TacDom - When Lemmings Attack</title>
-    <script src="/script/require-config.js"></script>
-    <script data-main="tacdom"
+    <script src="script/require.conf.js"></script>
+    <script data-main="launcher"
         src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.9/require.js"></script>
     <link rel="stylesheet" type="text/css" href="/style/tacdom.css" />
 </head>
