changed placeholder into a Loading message

--- a/public/tacdom.html
+++ b/public/tacdom.html
@@ -10,7 +10,9 @@
 
 <body>
 
-    <div id="tacdom">Placeholder</div>
+    <div id="tacdom">
+        <div class="blurb">Loading</div>
+    </div>
 
 </body>
 
