update template to take advantage of new styles

--- a/public/tacdom.html
+++ b/public/tacdom.html
@@ -11,7 +11,7 @@
 <body>
 
     <div id="tacdom">
-        <div class="blurb">Loading</div>
+        <span class="dialog">Loading</span>
     </div>
 
 </body>
